app-test/testdata/typesystem/neg/algebraic-type-duplicate-declaration/check/adt.check
testdata/typesystem/neg/algebraic-type-duplicate-declaration/src/adt.cal:3:5: error: T is already declared in this scope.
    type T : (int a) end // error
    ^^^^^^^^^^^^^^^^^^^^